test/files/neg/surrogates.check
surrogates.scala:3: error: illegal codepoint in Char constant: '\ud801\udc00'
  def `too wide for Char` = 'ğ€'
                            ^
1 error
